--- a/includes/front/css/black-widgets-public.css
+++ b/includes/front/css/black-widgets-public.css
@@ -6036,6 +6036,13 @@
 .bw-typograpgy-wrap .bw-typograpgy-main-title.bw-rotation-5,
 .bw-typograpgy-wrap .bw-typograpgy-main-title.bw-rotation-6,
 .bw-typograpgy-wrap .bw-typograpgy-main-title.bw-rotation-7,
+.bw-typograpgy-wrap .bw-typograpgy-animate.bw-rotation-1,
+.bw-typograpgy-wrap .bw-typograpgy-animate.bw-rotation-2,
+.bw-typograpgy-wrap .bw-typograpgy-animate.bw-rotation-3,
+.bw-typograpgy-wrap .bw-typograpgy-animate.bw-rotation-4,
+.bw-typograpgy-wrap .bw-typograpgy-animate.bw-rotation-5,
+.bw-typograpgy-wrap .bw-typograpgy-animate.bw-rotation-6,
+.bw-typograpgy-wrap .bw-typograpgy-animate.bw-rotation-7,
 .bw-typograpgy-wrap .bw-rotation-1 .bw-typography-this-title,
 .bw-typograpgy-wrap .bw-rotation-2 .bw-typography-this-title,
 .bw-typograpgy-wrap .bw-rotation-3 .bw-typography-this-title,
@@ -6048,6 +6055,7 @@
 }
 
 .bw-typograpgy-wrap .bw-typograpgy-main-title.bw-rotation-1,
+.bw-typograpgy-wrap .bw-typograpgy-animate.bw-rotation-1,
 .bw-typograpgy-wrap .bw-rotation-1 .bw-typography-this-title {
     transform: rotate( -180deg);
     -webkit-transform: rotate( -180deg);
@@ -6057,6 +6065,7 @@
 }
 
 .bw-typograpgy-wrap .bw-typograpgy-main-title.bw-rotation-2,
+.bw-typograpgy-wrap .bw-typograpgy-animate.bw-rotation-2,
 .bw-typograpgy-wrap .bw-rotation-2 .bw-typography-this-title {
     transform: rotate( -90deg);
     -webkit-transform: rotate( -90deg);
@@ -6066,6 +6075,7 @@
 }
 
 .bw-typograpgy-wrap .bw-typograpgy-main-title.bw-rotation-3,
+.bw-typograpgy-wrap .bw-typograpgy-animate.bw-rotation-3,
 .bw-typograpgy-wrap .bw-rotation-3 .bw-typography-this-title {
     transform: rotate( -45deg);
     -webkit-transform: rotate( -45deg);
@@ -6075,6 +6085,7 @@
 }
 
 .bw-typograpgy-wrap .bw-typograpgy-main-title.bw-rotation-4,
+.bw-typograpgy-wrap .bw-typograpgy-animate.bw-rotation-4,
 .bw-typograpgy-wrap .bw-rotation-4 .bw-typography-this-title {
     transform: rotate( 0deg);
     -webkit-transform: rotate( 0deg);
@@ -6084,6 +6095,7 @@
 }
 
 .bw-typograpgy-wrap .bw-typograpgy-main-title.bw-rotation-5,
+.bw-typograpgy-wrap .bw-typograpgy-animate.bw-rotation-5,
 .bw-typograpgy-wrap .bw-rotation-5 .bw-typography-this-title {
     transform: rotate( 45deg);
     -webkit-transform: rotate( 45deg);
@@ -6093,6 +6105,7 @@
 }
 
 .bw-typograpgy-wrap .bw-typograpgy-main-title.bw-rotation-6,
+.bw-typograpgy-wrap .bw-typograpgy-animate.bw-rotation-6,
 .bw-typograpgy-wrap .bw-rotation-6 .bw-typography-this-title {
     transform: rotate( 90deg);
     -webkit-transform: rotate( 90deg);
@@ -6102,6 +6115,7 @@
 }
 
 .bw-typograpgy-wrap .bw-typograpgy-main-title.bw-rotation-7,
+.bw-typograpgy-wrap .bw-typograpgy-animate.bw-rotation-7,
 .bw-typograpgy-wrap .bw-rotation-7 .bw-typography-this-title {
     transform: rotate( 180deg);
     -webkit-transform: rotate( 180deg);
