GSAP Productive — Part A
GSAP Productive — Part A

--- a/includes/front/css/black-widgets-public.css
+++ b/includes/front/css/black-widgets-public.css
@@ -5841,6 +5841,9 @@
 
 
 /* Simple Style */
+.bw-typograpgy-wrap {
+    word-break: break-all;
+}
 
 .bw-typograpgy.bw-t-1 {
     position: relative;
